--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
     </div>
 
-    <form action="">
+    <form action="https://formspree.io/f/xqknreql" method="POST">
 
         <div class="inputBox">
             <input type="text" placeholder="your name">
