--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
             </div>
 
-            <a href="#" class="btn"> download CV <i class="fas fa-download"></i> </a>
+            <a href="resume-aryan.pdf" class="btn" download> download CV <i class="fas fa-download"></i> </a>
 
         </div>
 
