--- a/contact.html
+++ b/contact.html
@@ -81,18 +81,18 @@
     <form action="https://formspree.io/f/xqknreql" method="POST">
 
         <div class="inputBox">
-            <input type="text" placeholder="your name">
-            <input type="number" placeholder="your number">
+            <input name="name" type="text" placeholder="your name">
+            <input name="number" type="number" placeholder="your number">
         </div>
 
         <div class="inputBox">
-            <input type="email" placeholder="your email">
-            <input type="text" placeholder="your subject">
+            <input name="mail" type="email" placeholder="your email">
+            <input name="subject" type="text" placeholder="your subject">
         </div>
 
-        <textarea name="" placeholder="your message" id="" cols="30" rows="10"></textarea>
+        <textarea name="message" placeholder="your message" id="" cols="30" rows="10"></textarea>
 
-        <input type="submit" value="send message" class="btn">
+        <input name="submit" type="submit" value="send message" class="btn">
 
     </form>
 
