this is the update of form submission. I have now successfully connected my website with form submission BOT.

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
     </div>
 
-    <form action="https://formspree.io/f/xqknreql" method="POST">
+    <form action="https://formspree.io/f/mbjbdaej" method="POST">
 
         <div class="inputBox">
             <input name="name" type="text" placeholder="your name">
@@ -92,7 +92,7 @@
 
         <textarea name="message" placeholder="your message" id="" cols="30" rows="10"></textarea>
 
-        <input name="submit" type="submit" value="send message" class="btn">
+        <input  type="submit" value="send message" class="btn">
 
     </form>
 
