Contact upgradation & blogs ang portfolio
I have successfully updated contacts. now, when I click on contact no. and mail it redirect to caller ID and mail services respectively .

In contrast with blogs and portfolio .Now, I have added blogs and portfolio section to my web site.

Possible Future Updates:
1. map may be added
2.you can see new blogs
3.some interesting JavaScript logics may be implemented.
ETC

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,94 +14,97 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-    
-<!-- navbar section starts  -->
 
-<nav class="navbar">
-    <a href="index.html"> <i class="fas fa-home"></i> <span>home</span> </a>
-    <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
-    <!-- <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a> -->
-    <!-- <a href="blogs.html"> <i class="fas fa-blog"></i> <span>blogs</span> </a> -->
-    <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
-</nav>
+    <!-- navbar section starts  -->
 
-<!-- navbar section ends -->
+    <nav class="navbar">
+        <a href="index.html"> <i class="fas fa-home"></i> <span>home</span> </a>
+        <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
+        <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+        <a href="blogs.html"> <i class="fas fa-blog"></i> <span>blogs</span> </a>
+        <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
+    </nav>
 
-<!-- contact section starts  -->
+    <!-- navbar section ends -->
 
-<section class="contact">
+    <!-- contact section starts  -->
 
-<h1 class="heading"> contact <span>me</span> </h1>
+    <section class="contact">
 
-<div class="row">
+        <h1 class="heading"> contact <span>me</span> </h1>
 
-    <div class="info-container">
+        <div class="row">
 
-        <h1>get in touch</h1>
+            <div class="info-container">
 
-        <p>Tell me If You have any Project :-)</p>
+                <h1>get in touch</h1>
 
-        <div class="box-container">
+                <p>Tell me If You have any Project :-)</p>
 
-            <div class="box">
-                <i class="fas fa-map"></i>
-                <div class="info">
-                    <h3>address :</h3>
-                    <p>Sitamarhi,Bihar</p>
+                <div class="box-container">
+
+                    <div class="box">
+                        <i class="fas fa-map"></i>
+                        <div class="info">
+                            <h3>address :</h3>
+                            <p>Sitamarhi,Bihar</p>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <i class="fas fa-envelope"></i>
+                        <div class="info">
+                            <h3>email :</h3>
+                            <p><a href="mailto:Aryan.Official.Cse@Mail.Com" style="text-decoration: none; color:#aaa;">aryan.official.cse@mail.com</a></p>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <i class="fas fa-phone"></i>
+                        <div class="info">
+                            <h3>number :</h3>
+                            <p><a href="tel:+918235172505" style="text-decoration: none; color:#aaa;">+918235172505</a></p>
+                        </div>
+                    </div>
+
                 </div>
+
+                <div class="share">
+                    <a href="https://www.facebook.com/Aryan.kumar.2505" class="fab fa-facebook-f"></a>
+                    <a href="https://twitter.com/AryanKu20348088?t=0tQyhzJHMXBe7ap4OebJAA&s=09"
+                        class="fab fa-twitter"></a>
+                    <a href="https://instagram.com/i_aryankushwaha" class="fab fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/aryan-kumar-8550b71a1" class="fab fa-linkedin"></a>
+                </div>
+
             </div>
 
-            <div class="box">
-                <i class="fas fa-envelope"></i>
-                <div class="info">
-                    <h3>email :</h3>
-                    <p>aryan.official.cse@mail.com</p>
+            <form action="https://formspree.io/f/mbjbdaej" method="POST">
+
+                <div class="inputBox">
+                    <input name="name" type="text" placeholder="your name">
+                    <input name="number" type="number" placeholder="your number">
                 </div>
-            </div>
 
-            <div class="box">
-                <i class="fas fa-phone"></i>
-                <div class="info">
-                    <h3>number :</h3>
-                    <p>+918235172505</p>
+                <div class="inputBox">
+                    <input name="mail" type="email" placeholder="your email">
+                    <input name="subject" type="text" placeholder="your subject">
                 </div>
-            </div>
+
+                <textarea name="message" placeholder="your message" id="" cols="30" rows="10"></textarea>
+
+                <input type="submit" value="send message" class="btn">
+
+            </form>
 
         </div>
 
-        <div class="share">
-            <a href="https://www.facebook.com/Aryan.kumar.2505" class="fab fa-facebook-f"></a>
-            <a href="https://twitter.com/AryanKu20348088?t=0tQyhzJHMXBe7ap4OebJAA&s=09" class="fab fa-twitter"></a>
-            <a href="https://instagram.com/jivit.prani" class="fab fa-instagram"></a>
-            <a href="https://www.linkedin.com/in/aryan-kumar-8550b71a1" class="fab fa-linkedin"></a>
-        </div>
+    </section>
 
-    </div>
-
-    <form action="https://formspree.io/f/mbjbdaej" method="POST">
-
-        <div class="inputBox">
-            <input name="name" type="text" placeholder="your name">
-            <input name="number" type="number" placeholder="your number">
-        </div>
-
-        <div class="inputBox">
-            <input name="mail" type="email" placeholder="your email">
-            <input name="subject" type="text" placeholder="your subject">
-        </div>
-
-        <textarea name="message" placeholder="your message" id="" cols="30" rows="10"></textarea>
-
-        <input  type="submit" value="send message" class="btn">
-
-    </form>
-
-</div>
-
-</section>
-
-<!-- contact section ends -->
+    <!-- contact section ends -->
 
 </body>
+
 </html>
