--- a/blogs.html
+++ b/blogs.html
@@ -20,7 +20,7 @@
 <nav class="navbar">
     <a href="index.html"> <i class="fas fa-home"></i> <span>home</span> </a>
     <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
-    <!-- <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a> -->
+    <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
     <a href="blogs.html"> <i class="fas fa-blog"></i> <span>blogs</span> </a>
     <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
@@ -124,6 +124,20 @@
                 <h3>Google Clone</h3>
                 <p>Make Google Search Clone</p>
                 <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="images/product.png" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                </div>
+                <h3>Product Pop-Up</h3>
+                <p>made Product pop-up using Pure HTML & CSS</p>
+                <a rel="noreferrer" href="https://github.com/Aryan-ji/product_pop-up.github.io.git" class="btn" target="_blank"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
